<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.home.HomeFragment">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_icon" />

            <include
                android:id="@+id/include"
                layout="@layout/include_home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_icon"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_fashion"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/home_fashion"
                android:textAppearance="@style/System2Bold"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include" />

            <TextView
                android:id="@+id/tv_hotissue"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:gravity="center"
                android:text="@string/home_hot_issue"
                android:textAppearance="@style/System2Bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/tv_fashion"
                app:layout_constraintStart_toEndOf="@+id/tv_fashion"
                app:layout_constraintTop_toTopOf="@+id/tv_fashion" />

            <TextView
                android:id="@+id/tv_more1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/home_more"
                app:layout_constraintBottom_toBottomOf="@+id/tv_hotissue"
                app:layout_constraintEnd_toStartOf="@+id/iv_more"
                app:layout_constraintTop_toTopOf="@+id/tv_hotissue" />

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_more"
                app:layout_constraintBottom_toBottomOf="@+id/tv_more1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_more1" />


            <include
                android:id="@+id/layout_article1"
                layout="@layout/include_home_article"
                android:clickable="true"
                android:layout_width="match_parent"
                app:title="@{@string/home_title_article1}"
                app:content="@{@string/home_content_article1}"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_hotissue" />

            <include
                android:id="@+id/layout_article2"
                layout="@layout/include_home_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@{@string/home_title_article2}"
                app:content="@{@string/home_content_article2}"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_article1" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey_400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_article2" />


            <include
                android:id="@+id/layout_header1"
                layout="@layout/include_home_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:header="@{@string/home_nonchi}"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <ImageView
                android:id="@+id/iv_brand1"
                android:layout_width="156dp"
                android:layout_height="162dp"
                android:src="@drawable/brand1"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_header1" />


            <ImageView
                android:id="@+id/iv_brand2"
                android:layout_width="154dp"
                android:layout_height="87dp"
                android:src="@drawable/brand2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_brand1"
                app:layout_constraintTop_toTopOf="@+id/iv_brand1" />

            <ImageView
                android:id="@+id/iv_brand3"
                android:layout_width="154dp"
                android:layout_height="66dp"
                android:src="@drawable/brand3"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_brand1"
                app:layout_constraintTop_toBottomOf="@+id/iv_brand2" />

            <include
                android:id="@+id/layout_header2"
                layout="@layout/include_home_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                app:header="@{@string/home_interest}"
                app:layout_constraintTop_toBottomOf="@+id/iv_brand1" />

            <ImageView
                android:id="@+id/iv_list"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/img_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_header2" />

            <View
                android:id="@+id/view_introduce"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/shpae_grey_fill_6_rect"
                app:layout_constraintTop_toBottomOf="@+id/iv_list" />

            <ImageView
                android:id="@+id/iv_introduce"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_paris"
                app:layout_constraintBottom_toBottomOf="@+id/view_introduce"
                app:layout_constraintStart_toStartOf="@+id/view_introduce"
                app:layout_constraintTop_toTopOf="@+id/view_introduce" />

            <TextView
                android:id="@+id/tv_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/paris"
                android:textAppearance="@style/System2Bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/iv_introduce"
                app:layout_constraintTop_toTopOf="@+id/iv_introduce" />

            <TextView
                android:id="@+id/tv_introduce_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/home_paris_intro"
                android:textAppearance="@style/System4Regular"
                android:textColor="@color/grey_900"
                app:layout_constraintStart_toEndOf="@+id/iv_introduce"
                app:layout_constraintTop_toBottomOf="@+id/tv_introduce" />


            <TextView
                android:id="@+id/tv_introduce_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="28dp"
                android:text="@string/home_comment"
                android:textAppearance="@style/System2Bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_introduce" />

            <ImageView
                android:id="@+id/iv_ballon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_orange_ballon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_introduce_comment" />

            <ImageView
                android:id="@+id/iv_mascort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mascort_cut"
                app:layout_constraintBottom_toBottomOf="@+id/iv_ballon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_ballon" />

            <TextView
                android:id="@+id/tv_change_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/home_change_comment"
                android:textAppearance="@style/System3Regular"
                app:layout_constraintStart_toStartOf="@+id/iv_ballon"
                app:layout_constraintTop_toTopOf="@+id/iv_ballon" />

            <include
                android:id="@+id/layout_article4"
                layout="@layout/include_home_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@{@string/home_title_article3}"
                app:content="@{@string/home_content_article3}"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_ballon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>